Fixed an issue with the Header going out of bounding box when viewing on mobile.

--- a/styles/MainStyles.css
+++ b/styles/MainStyles.css
@@ -29,7 +29,7 @@ h1
     background-clip: text;
     -webkit-text-fill-color: transparent;
     text-align: center;
-    font-size: 5.5rem;
+    font-size: 4.7rem;
     padding-top: 50px;
 }
 h2, h3, h4, h5
